# __faer-bench

./: Cargo.toml  build.rs  eigen.cpp  mkl.cpp  plot.py
src/: main.rs
